@@ -1,3 +1,10 @@
+Sun Nov 15 14:18:35 GMT 2009  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (compare_candidates): Prefer getting a page from the
+	  best manual section over getting a page in the correct language; I
+	  have my reservations about this, but it seems to be what people
+	  are requesting (Debian bug #519547).
+
 Sun Nov 15 14:02:11 GMT 2009  Colin Watson  <cjwatson@debian.org>
 
 	Search man<sec><ext> directories in the GNU layout (Debian bug
